# parallels-mag2

./: .gitignore  CMakeLists.txt  Makefile  README.md  test_combined.sh  test_mpi.sh  test_omp.sh
analysis/: analyze_combined.py  analyze_mpi.py  analyze_omp.py
src/common/: common.cpp  common.h  logger.cpp  logger.h  task.cpp  task.h
src/mpi/: CMakeLists.txt  ver_mpi.cpp
src/openmp_single/: CMakeLists.txt  ver_openmp.cpp
